Construct AltosMapInterface
Provide an interface between the MapFragment and the map presentation itself.

Signed-off-by: Keith Packard <keithp@keithp.com>